--- a/src/app/features/user/profile/user-slider/user-slider.component.html
+++ b/src/app/features/user/profile/user-slider/user-slider.component.html
@@ -91,7 +91,7 @@ var numOfFireElements   = 10;
 			    $(fireElementImages[i]).addClass('FireImage');
 			    $(fireElementImages[i]).load(function()
 			    {
-			      console.log("Image Load Complete: " + this.id);      
+			       ("Image Load Complete: " + this.id);      
 			    });
 			  }
 			}
