--- a/src/app/features/auth/user/register/register.component.html
+++ b/src/app/features/auth/user/register/register.component.html
@@ -1,60 +1,67 @@
-<div class="row">
-    <div class="col-8 offset-2">
-        <h2 class="text-center">User Register</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-9 col-md-6 mt-3 mb-3"  style="border:5px solid #d3d1e0;
+                background-color: rgb(255, 255, 255);margin: auto; ">
 
         <form (ngSubmit)="onSubmit()" #form="ngForm" [formGroup]="registerForm">
+            <legend class="well-legend">User Register</legend>
 
             <!-- // first_name //  -->
-            <div class="form-group">
+            <div class="md-form">
+                <i class="fas fa-user prefix grey-text"></i>
                 <label for="first_name">First Name</label>
-                <input type="text" class="form-control" formControlName="firstName" placeholder="first name" minlength="3">
+                <input type="text" class="form-control" formControlName="firstName" minlength="3">
                 <span *ngIf="firstName.touched &&  firstName.errors?.required"> this is required </span>
                 <span *ngIf="firstName.errors?.min"> minLength must be 3 </span>
 
             </div>
             <!-- // last_name //  -->
 
-            <div class="form-group">
+            <div class="md-form">
+                <i class="fas fa-user prefix grey-text"></i>
                 <label for="last_name">last name</label>
-                <input type="text" class="form-control" formControlName="lastName" placeholder="last name" minlength="3">
+                <input type="text" class="form-control" formControlName="lastName" minlength="3">
                 <span *ngIf="lastName.touched &&  lastName.errors?.required"> this is required </span>
                 <span *ngIf="lastName.errors?.min"> minLength must be 3 </span>
 
             </div>
 
-            <div class="form-group">
+            <div class="md-form">
+                <i class="fas fa-users prefix grey-text"></i>
                 <label for="username">user name</label>
-                <input type="text" class="form-control" formControlName="username" placeholder="user name">
+                <input type="text" class="form-control" formControlName="username">
                 <span *ngIf="username.touched &&  username.errors?.required"> this is required </span>
             </div>
 
             <!-- // email //  -->
-            <div class="form-group">
+            <div class="md-form">
+                <i class="fas fa-envelope prefix grey-text"></i>
                 <label for="email">email</label>
-                <input type="email" class="form-control" formControlName="email" placeholder="email" email>
+                <input type="email" class="form-control" formControlName="email" email>
                 <span *ngIf="email.touched &&  email.errors?.required"> this is required must be email </span>
                 <span *ngIf="email.errors?.email">this field must be email </span>
 
             </div>
 
             <!-- // phone //  -->
-            <div class="form-group">
+            <div class="md-form">
+                <i class="fas fa-phone prefix grey-text"></i>
                 <label for="phone">phone</label>
-                <input type="text" class="form-control" formControlName="phone" placeholder="phone">
+                <input type="text" class="form-control" formControlName="phone">
                 <span *ngIf="phone.touched && phone.errors?.required"> must be phone</span>
                 <span *ngIf="phone.errors?.phone">this field must be phone </span>
             </div>
 
             <!-- // address //  -->
             <div formGroupName="address">
-                <div class="form-group">
+                <div class="form-group ml-5">
                     <label for="address"> governorate</label>
-                    <div className="form-group">
-                        <div className="input-group">
-                            <span className="input-group-addon">
-                                <span className="glyphicon glyphicon-lock"></span>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-lock"></span>
                             </span>
-                            <select className="form-control" formControlName="governorate_id"
+                            <select class="form-control" formControlName="governorate_id"
                                 (change)="get_Gov_Cities($event)">
                                 <option *ngFor="let governorate of governorates" [value]="governorate._id">
                                     {{governorate.name}}</option>
@@ -65,14 +72,14 @@
                     </div>
 
                 </div>
-                <div class="form-group">
+                <div class="form-group ml-5">
                     <label for="address"> city</label>
-                    <div className="form-group">
-                        <div className="input-group">
-                            <span className="input-group-addon">
-                                <span className="glyphicon glyphicon-lock"></span>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-lock"></span>
                             </span>
-                            <select className="form-control" formControlName="city_id">
+                            <select class="form-control" formControlName="city_id">
 
                                 <option *ngFor="let city of cities" [value]="city._id">{{city.name}}</option>
 
@@ -88,9 +95,10 @@
 
             <!-- // password //  -->
 
-            <div class="form-group">
+            <div class="md-form">
+                <i class="fas fa-unlock-alt prefix grey-text"></i>
                 <label for="password">password </label>
-                <input type="password" class="form-control" formControlName="password" placeholder="password">
+                <input type="password" class="form-control" formControlName="password" >
                 <span *ngIf="password.touched &&  password.errors?.required"> this is required </span>
             </div>
 
@@ -103,4 +111,5 @@
     <router-outlet></router-outlet>
   </div> -->
     </div>
+</div>
 </div>
