--- a/src/app/features/auth/owner/login/login.component.html
+++ b/src/app/features/auth/owner/login/login.component.html
@@ -53,7 +53,9 @@
                 </div>
     
             </form>
-                
+            <div class="foot-lnk">
+                <a class="" routerLink="/forgetPassword">Forget password?</a>
+            </div>
           
         </div>
     </div>
