--- a/src/app/features/auth/user/login/login.component.html
+++ b/src/app/features/auth/user/login/login.component.html
@@ -42,7 +42,9 @@
     
             </form>
             <!-- Form -->
-    
+            <div class="foot-lnk">
+                <a class="" routerLink="/forgetPassword">Forget password?</a>
+            </div>
             <!-- <div class="container">
         <router-outlet></router-outlet>
       </div> -->
