--- a/src/app/features/playground/playground-details/playground-details.component.html
+++ b/src/app/features/playground/playground-details/playground-details.component.html
@@ -27,12 +27,11 @@
                     <h5 class="orange-text"><i class="fas fa-futbol"></i> playground</h5>
     
                     <h3 class="card-title pt-2"><b> Name : {{ playground.name}}</b></h3>
-    
                     <p class="card-text"><b>Details: </b>{{ playground.details}}</p> <br>
-                    <p class="card-text"> <b>Category: </b> {{ playground.category_id.name}}</p>
+                    <p class="card-text"> <b>Category: </b> {{ playground.category_id?.name}}</p>
                     <p class="card-text"><b> Day Price:</b>{{ playground.dayPrice}}</p>
                     <p class="card-text"> <b> Night Price </b> :{{ playground.nightPrice}}</p>
-                    <p class="card-text"><b> Owner :</b>{{ playground.owner_id.username}}</p>
+                    <p class="card-text"><b> Owner :</b>{{ playground.owner_id?.username}}</p>
                     <p class="card-text" *ngIf="playground.covered"><b>Covered</b></p>
                     <h2 class="card-text" *ngIf="!playground.covered"><b>Open</b></h2>
     
@@ -48,32 +47,34 @@
 
     <!--Grid column-->
     <div class="col-md-6">
-
+      <agm-map [latitude]="lat" [longitude]="lng"  >
+        <agm-marker [latitude]="  lat" [longitude]="lng"></agm-marker>
+      </agm-map>
+      <br>
       <!--Google map-->
-      <div id="map-container-google-11" class="z-depth-1-half map-container-6  col-md-10 offset-1" style="height: 400px">
+      <!-- <div id="map-container-google-11" class="z-depth-1-half map-container-6  col-md-10 offset-1" style="height: 400px">
         <iframe src="https://maps.google.com/maps?q=new%20delphi&t=&z=13&ie=UTF8&iwloc=&output=embed"
           frameborder="0" style="border:0" allowfullscreen></iframe>
-      </div>
+      </div> -->
 
-      <br>
 
       <!--Buttons-->
       <div class="row text-center">
         <div class="col-md-4">
           <a class=""><i class="fas fa-map-marker-alt"></i></a>
-          <p>{{playground.address.city_id.name}}</p>
-          <p>{{playground.address.governorate_id.name}}</p>
+          <p>{{playground.address?.city_id.name}}</p>
+          <p>{{playground.address?.governorate_id.name}}</p>
         </div>
 
         <div class="col-md-4">
           <a class="btn-floating"><i class="fas fa-phone"></i></a>
-          <p>+ 0{{playground.owner_id.phone}}</p>
-          <p>{{playground.owner_id.date | date}}</p>
+          <p>+ 0{{playground.owner_id?.phone}}</p>
+          <p>{{playground.owner_id?.date | date}}</p>
         </div>
 
         <div class="col-md-4">
           <a class="btn-floating"><i class="fas fa-envelope"></i></a>
-          <p>{{playground.owner_id.email}}</p>
+          <p>{{playground.owner_id?.email}}</p>
           
         </div>
       </div>
@@ -84,5 +85,6 @@
   </div>
 
 
+ 
 
 </div>
