disabled date befor and change background

--- a/src/app/features/owner/booking/booking-list/booking-list.component.html
+++ b/src/app/features/owner/booking/booking-list/booking-list.component.html
@@ -18,7 +18,7 @@
                 </div>
               </div>
               <table  datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"                         
-                     class="row-border table-hover table table-striped table-dark wow fadeInDown" data-wow-duration="1s" data-wow-delay="300ms">
+                     class="row-border table-hover table  wow fadeInDown" data-wow-duration="1s" data-wow-delay="300ms">
                
                 <thead>
                   <tr>
