--- a/src/app/features/user/booking/booking-add/booking.component.css
+++ b/src/app/features/user/booking/booking-add/booking.component.css
@@ -48,4 +48,8 @@ input {
 
   select option[disabled]{
     background-color: rgb(155, 58, 58);
+    display:none;
+  }
+  input[disabled]{
+    background-color: gray;
   }
